src/include/fann.h


FANN_EXTERNAL struct fann * FANN_API fann_create(float connection_rate, float learning_rate,
	unsigned int num_layers,
	...);
FANN_EXTERNAL struct fann * FANN_API fann_create_array(float connection_rate, float learning_rate,
	unsigned int num_layers, unsigned int * layers);
FANN_EXTERNAL struct fann * FANN_API fann_create_shortcut(float learning_rate,
	unsigned int num_layers, 
	...); 
FANN_EXTERNAL struct fann * FANN_API fann_create_shortcut_array(float learning_rate, unsigned int num_layers, unsigned int * layers);
FANN_EXTERNAL fann_type* FANN_API fann_run(struct fann *ann, fann_type *input);
FANN_EXTERNAL void FANN_API fann_destroy(struct fann *ann);
FANN_EXTERNAL void FANN_API fann_randomize_weights(struct fann *ann, fann_type min_weight, fann_type max_weight);
FANN_EXTERNAL void FANN_API fann_init_weights(struct fann *ann, struct fann_train_data * train_data);
FANN_EXTERNAL void FANN_API fann_print_connections(struct fann *ann);
FANN_EXTERNAL struct fann * FANN_API fann_create_from_file(const char *configuration_file);
FANN_EXTERNAL void FANN_API fann_save(struct fann *ann, const char *configuration_file);
FANN_EXTERNAL int FANN_API fann_save_to_fixed(struct fann *ann, const char *configuration_file);
FANN_EXTERNAL void FANN_API fann_train(struct fann *ann, fann_type *input, fann_type *desired_output);
FANN_EXTERNAL fann_type * FANN_API fann_test(struct fann *ann, fann_type *input, fann_type *desired_output);
FANN_EXTERNAL float FANN_API fann_get_MSE(struct fann *ann);
FANN_EXTERNAL void FANN_API fann_reset_MSE(struct fann *ann);
FANN_EXTERNAL struct fann_train_data* FANN_API fann_read_train_from_file(char *filename);
FANN_EXTERNAL void FANN_API fann_destroy_train(struct fann_train_data* train_data);
FANN_EXTERNAL float FANN_API fann_train_epoch(struct fann *ann, struct fann_train_data *data);
FANN_EXTERNAL float FANN_API fann_test_data(struct fann *ann, struct fann_train_data *data);
FANN_EXTERNAL void FANN_API fann_train_on_data(struct fann *ann, struct fann_train_data *data, unsigned int max_epochs, unsigned int epochs_between_reports, float desired_error);
FANN_EXTERNAL void FANN_API fann_train_on_data_callback(struct fann *ann, struct fann_train_data *data, unsigned int max_epochs, unsigned int epochs_between_reports, float desired_error, int (FANN_API *callback)(unsigned int epochs, float error));
FANN_EXTERNAL void FANN_API fann_train_on_file(struct fann *ann, char *filename, unsigned int max_epochs, unsigned int epochs_between_reports, float desired_error);
FANN_EXTERNAL void FANN_API fann_train_on_file_callback(struct fann *ann, char *filename, unsigned int max_epochs, unsigned int epochs_between_reports, float desired_error, int (FANN_API *callback)(unsigned int epochs, float error));
FANN_EXTERNAL void FANN_API fann_shuffle_train_data(struct fann_train_data *train_data);
FANN_EXTERNAL struct fann_train_data * FANN_API fann_merge_train_data(struct fann_train_data *data1, struct fann_train_data *data2);
FANN_EXTERNAL struct fann_train_data * FANN_API fann_duplicate_train_data(struct fann_train_data *data);
FANN_EXTERNAL void FANN_API fann_save_train(struct fann_train_data* data, char *filename);
FANN_EXTERNAL void FANN_API fann_save_train_to_fixed(struct fann_train_data* data, char *filename, unsigned int decimal_point);
FANN_EXTERNAL void FANN_API fann_print_parameters(struct fann *ann);
FANN_EXTERNAL unsigned int FANN_API fann_get_training_algorithm(struct fann *ann);
FANN_EXTERNAL void FANN_API fann_set_training_algorithm(struct fann *ann, unsigned int training_algorithm);
FANN_EXTERNAL float FANN_API fann_get_learning_rate(struct fann *ann);
FANN_EXTERNAL void FANN_API fann_set_learning_rate(struct fann *ann, float learning_rate);
FANN_EXTERNAL unsigned int FANN_API fann_get_activation_function_hidden(struct fann *ann);
FANN_EXTERNAL void FANN_API fann_set_activation_function_hidden(struct fann *ann, unsigned int activation_function);
FANN_EXTERNAL unsigned int FANN_API fann_get_activation_function_output(struct fann *ann);
FANN_EXTERNAL void FANN_API fann_set_activation_function_output(struct fann *ann, unsigned int activation_function);
FANN_EXTERNAL fann_type FANN_API fann_get_activation_steepness_hidden(struct fann *ann);
FANN_EXTERNAL void FANN_API fann_set_activation_steepness_hidden(struct fann *ann, fann_type steepness);
FANN_EXTERNAL fann_type FANN_API fann_get_activation_steepness_output(struct fann *ann);
FANN_EXTERNAL void FANN_API fann_set_activation_steepness_output(struct fann *ann, fann_type steepness);
FANN_EXTERNAL void FANN_API fann_set_train_error_function(struct fann *ann, unsigned int train_error_function);
FANN_EXTERNAL unsigned int FANN_API fann_get_train_error_function(struct fann *ann);
FANN_EXTERNAL float FANN_API fann_get_quickprop_decay(struct fann *ann);
FANN_EXTERNAL void FANN_API fann_set_quickprop_decay(struct fann *ann, float quickprop_decay);
FANN_EXTERNAL float FANN_API fann_get_quickprop_mu(struct fann *ann);
FANN_EXTERNAL void FANN_API fann_set_quickprop_mu(struct fann *ann, float quickprop_mu);
FANN_EXTERNAL float FANN_API fann_get_rprop_increase_factor(struct fann *ann);
FANN_EXTERNAL void FANN_API fann_set_rprop_increase_factor(struct fann *ann, float rprop_increase_factor);
FANN_EXTERNAL float FANN_API fann_get_rprop_decrease_factor(struct fann *ann);
FANN_EXTERNAL void FANN_API fann_set_rprop_decrease_factor(struct fann *ann, float rprop_decrease_factor);
FANN_EXTERNAL float FANN_API fann_get_rprop_delta_min(struct fann *ann);
FANN_EXTERNAL void FANN_API fann_set_rprop_delta_min(struct fann *ann, float rprop_delta_min);
FANN_EXTERNAL float FANN_API fann_get_rprop_delta_max(struct fann *ann);
FANN_EXTERNAL void FANN_API fann_set_rprop_delta_max(struct fann *ann, float rprop_delta_max);
FANN_EXTERNAL unsigned int FANN_API fann_get_num_input(struct fann *ann);
FANN_EXTERNAL unsigned int FANN_API fann_get_num_output(struct fann *ann);
FANN_EXTERNAL unsigned int FANN_API fann_get_total_neurons(struct fann *ann);
FANN_EXTERNAL unsigned int FANN_API fann_get_total_connections(struct fann *ann);
FANN_EXTERNAL unsigned int FANN_API fann_get_decimal_point(struct fann *ann);
FANN_EXTERNAL unsigned int FANN_API fann_get_multiplier(struct fann *ann);
FANN_EXTERNAL void FANN_API fann_set_error_log(struct fann_error *errdat, FILE *log_file);
FANN_EXTERNAL unsigned int FANN_API fann_get_errno(struct fann_error *errdat);
FANN_EXTERNAL void FANN_API fann_reset_errno(struct fann_error *errdat);
FANN_EXTERNAL void FANN_API fann_reset_errstr(struct fann_error *errdat);
FANN_EXTERNAL char * FANN_API fann_get_errstr(struct fann_error *errdat);
FANN_EXTERNAL void FANN_API fann_print_error(struct fann_error *errdat);